outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-21_23-21-44/evaluations/problem_eval598615334317780782_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined as the sum of distances to all other nodes. The score is calculated as `-distance - 0.3 * centrality`, favoring closer nodes while slightly penalizing highly central nodes to reduce revisits. The function iterates through unvisited nodes, computes this score, and selects the node with the highest value.}
                                                                                                                                                                                                                                                                                                                            ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined as the sum of distances to all other nodes. The score is calculated as `-distance - 0.3 * centrality`, favoring closer nodes while slightly penalizing highly central nodes to reduce revisits. The function iterates through unvisited nodes, computes this score, and selects the node with the highest value.}
                                                                                                                                                                                                                                                                                                                            ^
SyntaxError: unmatched '}'
